23/07/23 index 차트 2 정렬

--- a/tptp/src/main/resources/templates/app/mapPopup.html
+++ b/tptp/src/main/resources/templates/app/mapPopup.html
@@ -29,7 +29,7 @@
 				 <div class="section-title">
 		          <span>MAP</span>
 		          <h2>MAP</h2>
-		          <strong th:text="${region}"></strong><strong th:if="${category}" th:text="${category}"></strong>
+		          <strong th:if="${region}" th:text="${region}"></strong><strong th:if="${region}"> </strong><strong th:if="${category}" th:text="${category}"></strong>
 		          <p>자세한 정보가 알고싶다면 메뉴에서 MAP을 클릭해주세요!</p>
 		        </div>
 	          </div>
