--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -92,7 +92,6 @@
 					geoLat = 37.566826; // 현재 위치 비허용시 초기 위도 경도
 					geoLng = 126.9786567;
 				}
-				
 			}
 			
 			function getAjax() { // ajax 함수 선언
@@ -105,7 +104,7 @@
 			}
 			
 			function displayMap() {
-				console.log(geoLat, geoLng);
+
 				var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 				    mapOption = {
 				        center: new kakao.maps.LatLng(geoLat, geoLng), // 지도의 중심좌표(초기값: 사용자 위치)
@@ -169,7 +168,6 @@
 							currentNum = 1;
 							pageCount = 1;
 							displayPagination(viewList);
-							
 						});
 						//실패
 						request.fail(function(jqXHR, textStatus, viewList){
@@ -304,11 +302,13 @@
 			                });
 
 			                kakao.maps.event.addListener(marker, 'mouseout', function() {
-			                    infowindow.close();
+			                    //infowindow.close();
 			                });
 			                
 			                kakao.maps.event.addListener(marker, 'click', function() {
 			                    console.log(marker);
+			                    geoMarker.setMap(null);
+			                    displayInfowindow(marker, title);
 			                    geoLat = marker.getPosition().getLat();
 			                    geoLng = marker.getPosition().getLng();
 								var thisPosition = new kakao.maps.LatLng(geoLat, geoLng);
