23-07-24 리뷰게시판

--- a/tptp/src/main/resources/templates/app/modReview.html
+++ b/tptp/src/main/resources/templates/app/modReview.html
@@ -47,9 +47,9 @@
                 <div class="error-message"></div>
                 <div class="sent-message">리뷰가 수정되었습니다.</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-	          </div>
-            </form>
+              <div class="text-center"><button type="submit">수정하기</button></div>
+	       </div>
+          </form>
       </div>
     </section><!-- End Contact Me Section -->
 </main>
