--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -94,7 +94,7 @@
 				}
 			}
 			
-			function getAjax() { // ajax 함수 선언
+			function getAjax() { 
 				return $.ajax({
 			           url: "/mapCheck",
 			           type: "GET",
