--- a/tptp/src/main/resources/templates/app/reviewPopup.html
+++ b/tptp/src/main/resources/templates/app/reviewPopup.html
@@ -136,6 +136,13 @@
 	</main>
 
 <script th:inline="javascript">
+	console.log([[${msg}]]);
+	if([[${msg}]]) {
+		console.log("sss");
+		var msg = [[${msg}]];
+		alert(msg);
+	}
+
 	const reviewList = [[${reviewList}]];
 	console.log(reviewList);
 	const placeId = reviewList[0].placeId;
