--- a/tptp/src/main/resources/templates/app/reviewPopup.html
+++ b/tptp/src/main/resources/templates/app/reviewPopup.html
@@ -76,64 +76,54 @@
 		    	<span>BOARD</span>
 		        <h2>BOARD</h2>
 		        	<div th:if="${title}">
-						<strong th:text="${title}"></strong>의 리뷰입니다.</p>
+						<p><strong th:text="${title}"></strong>의 리뷰입니다.</p>
 					</div>
 					<div th:unless="${title}">
 						<p>해당 장소는 등록된 리뷰가 없습니다.</p>
 					</div>
 		   	</div>
-		   	
 			<div class="review_area">
-				
-			<!--리뷰 작성 폼(addReview) -->
-            <form th:action="@{/reviewWrite}" method="post" class="php-email-form">
-				<div class="review_area">
-					<textarea name="contents" id="write_content" placeholder="리뷰를 입력해주세요" maxlength="100" style="width: 100%; height: 80px; border: 1px solid#ccc; box-sizing: border-box; overflow: hidden;"></textarea>
-					<input type="text" name="placeId" th:value="${placeId}" hidden>
-					<input type="password" name="password" placeholder="비밀번호" style="border: 1px solid#ccc">
-					<input type="submit" class="write_submit" value="SUBMIT" style="background-color: #ffb727; border: none;">
-					
-				</div>
-			</form>
-			<div th:if="${not #lists.isEmpty(reviewList)}" th:each="r : ${reviewList}">
-				<form th:action=@{"/reviewModify"} method="post" id="obj" name="modify" class="php-email-form">
-	                <ul class="area_card_item" >
-	                    <li>
-							<p th:text = "${r.contents}" ></p>	
-						</li>  
-						<div class="place_date form-group">
+				<!--리뷰 작성 폼(addReview) -->
+		           <form th:action="@{/reviewWrite}" method="post" class="php-email-form">
+						<div class="review_area">
+							<textarea name="contents" id="write_content" placeholder="리뷰를 입력해주세요" maxlength="100" style="width: 100%; height: 80px; border: 1px solid#ccc; box-sizing: border-box; overflow: hidden;"></textarea>
+							<input type="hidden" name="placeId" th:value="${placeId}">
+							<input type="password" name="password" placeholder="비밀번호" style="border: 1px solid #ccc">
+							<input type="submit" class="write_submit" value="SUBMIT" style="background-color: #ffb727; border: none;">
+						</div>
+					</form>
+				<div th:if="${not #lists.isEmpty(reviewList)}" th:each="r : ${reviewList}">
+					<form th:action="@{/reviewModify}" method="post" name="modify" id="modify" class="php-email-form place_date form-group">
+		                <ul class="area_card_item" >
+		                    <li><p th:text = "${r.contents}" ></p></li>  
 							<li class="view_place">
 								<span>장소 : </span>
-									<th:block th:object="${r.tptp}">
+								<th:block th:object="${r.tptp}">
 	                        		<span th:text="*{place}"></span>
 						      	</th:block>
 	                    	</li> 
-	                    	<li class="view_reviewId" hidden>
+	                    	<li class="view_reviewId">
 								<span>아이디 : </span>
-	                        		<span class="reviewId" th:text="${r.reviewId}" name="reviewId"></span>
+	                        		<input type="hidden" class="reviewId" th:value="${r.reviewId}" name="reviewId">
 	                    	</li> 
 							<li class="view_date">
 	                        	<span class=""> 작성일 :</span>
 	                        	<span th:text="${r.writeDate}"></span>    
 	                    	</li>
-	               			
 	               			<li>
 								<div class="mod_del_button">
 									<a role="button" class="btnModify" style="margin-right: 0;"  >수정</a>									
-									<a role="button" href="#" class="btnDelete" style="margin-right: 0;"  >삭제</a>
+									<a role="button" href="#" class="btnDelete" style="margin-right: 0;">삭제</a>
 									<span class="reviewId" th:text="${r.reviewId}" hidden></span>
 								</div>
 							</li>
-						</div>
-					</ul>
-				</form>
+						</ul>
+					</form>
 				</div>
             </div>
         </div>
-        </section>
-    </div>
     </section>
-	</main>
+</main>
 
 <script th:inline="javascript">
 	console.log([[${msg}]]);
@@ -157,9 +147,35 @@
 			var result = confirm('이 리뷰글을 수정하시겠습니까?');
 		
 			if(result) {
-	        	var insertPw = prompt('글을 작성하실 때 입력하신 비밀번호를 입력해주세요');
-	        	var url = '/reviewModify?reviewId=' + reviewId +'&insertPw=' + insertPw;
-	        	window.open(url, "popup");
+				var insertPw = prompt('글을 작성하실 때 입력하신 비밀번호를 입력해주세요');
+				console.log(insertPw);
+				
+				var form = document.createElement("form");
+				form.setAttribute("charset", "UTF-8");
+		        form.setAttribute("method", "Post");  //Post 방식
+		        form.setAttribute("action", "/reviewModify"); //요청 보낼 주소
+		        
+		        var hiddenField = document.createElement("input");
+		        hiddenField.setAttribute("type", "hidden");
+		        hiddenField.setAttribute("name", "reviewId");
+		        hiddenField.setAttribute("value", reviewId);
+		        form.appendChild(hiddenField);
+				
+				hiddenField = document.createElement("input");
+		        hiddenField.setAttribute("type", "hidden");
+		        hiddenField.setAttribute("name", "insertPw");
+		        hiddenField.setAttribute("value", insertPw);
+		        form.appendChild(hiddenField);
+		        
+				hiddenField = document.createElement("input");
+		        hiddenField.setAttribute("type", "hidden");
+		        hiddenField.setAttribute("name", "placeId");
+		        hiddenField.setAttribute("value", placeId);
+		        form.appendChild(hiddenField);
+		        
+		        document.body.appendChild(form);
+				form.submit();
+	
 	        }
 	        else {
 				return false;
